welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:36: error: not found: value carre
    	carre();
        ^