welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  
  def symbole1(c:Color){
    avance();
    peindre(c);
    gauche();
    avance();
    gauche();
    avance();
    peindre(c);
    gauche();
    avance();
  }
  
  def symbole2(c:Color){
    avance(2);
    peindre(c);
    gauche();
    avance();
    gauche();
    avance();
    peindre(c);
    gauche();
    avance();
  }
  
  def peindre(c:Color){
    setCouleurBrosse(c);
    baisseBrosse();
    leveBrosse();
  }
    
  
  def ligne(){
    for (i <- 1 to 3){
    	carre();
    	avance(5)
  	}
  }
  
  def colone(){
    for (i <- 1 to 3){
      ligne();
    	gauche();
    	avance(5);
      droite();
    }
  }
  colone();
}